<resources>
    <string name="app_name">hw4_user_interfaces</string>
    <string name="gender">Пол</string>
    <string name="M">М</string>
    <string name="W">Ж</string>
    <string name="name">Имя</string>
    <string name="avatar">avatar</string>
    <string name="telephone">Телефон</string>
    <string name="receive_notifications">Получать уведомления</string>
    <string name="auth_on_device">Об авторизации на устройстве</string>
    <string name="news">О новинках и предложениях</string>
    <string name="scores">Баллы</string>
    <string name="save">Сохранить</string>
    <string name="count_score">100</string>
    <string name="save_info">Информация сохранена</string>

</resources>